// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`any.sql 1`] = `
Object {
  "parameters": Map {
    1 => Object {
      "column": "status",
      "isArray": true,
      "schema": undefined,
      "table": "orders",
    },
  },
  "returnValues": Array [
    Object {
      "alias": undefined,
      "schema": undefined,
      "table": "orders",
      "type": "star",
    },
  ],
  "warnings": Array [],
}
`;

exports[`json-operator.sql 1`] = `
Object {
  "parameters": Map {
    1 => Object {
      "column": "shipment_data",
      "isArray": false,
      "jsonPath": Object {
        "isText": true,
        "path": "company",
      },
      "schema": undefined,
      "table": "orders",
    },
  },
  "returnValues": Array [
    Object {
      "alias": undefined,
      "column": "order_id",
      "schema": undefined,
      "table": "orders",
      "type": "column",
    },
    Object {
      "alias": undefined,
      "column": "notes",
      "schema": undefined,
      "table": "orders",
      "type": "column",
    },
    Object {
      "alias": undefined,
      "column": "status",
      "schema": undefined,
      "table": "orders",
      "type": "column",
    },
  ],
  "warnings": Array [],
}
`;

exports[`select.sql 1`] = `
Object {
  "parameters": Map {},
  "returnValues": Array [
    Object {
      "alias": undefined,
      "constType": "integer",
      "type": "const",
      "value": 1,
    },
  ],
  "warnings": Array [],
}
`;
